[package]
authors = ["Aiden Langley <me@aidenlangley.com>"]
edition = "2018"
name = "korero"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.3", features = ["blocking", "json"]}
serde = {version = "1.0.126"}
serde_json = "1.0.64"
